be/src/exprs/tuple-is-null-predicate.cc
@@ -33,7 +33,9 @@ BooleanVal TupleIsNullPredicate::GetBooleanVal(
   for (int i = 0; i < tuple_idxs_.size(); ++i) {
     count += row->GetTuple(tuple_idxs_[i]) == NULL;
   }
-  return BooleanVal(!tuple_idxs_.empty() && count == tuple_idxs_.size());
+  // Return true only if all originally specified tuples are NULL. Return false if any
+  // tuple is non-nullable.
+  return BooleanVal(count == tuple_ids_.size());
 }
 
 TupleIsNullPredicate::TupleIsNullPredicate(const TExprNode& node)
